<resources>
    <string name="hint_bluetooth_close">Bluetooth is turned off</string>
    <string name="hint_alert_app">When there are notifications on apps, the watch will vibrate. </string>
    <string name="hint_ota_progress">Preparing for update, please wait ...</string>
    <string name="hint_menu_wrist"> Smart screen </string>
    <string name="app_name">iband</string>
    <string name="hint_sleep_deep_avg">Avg D-Sleep</string>
    <string name="hint_bluetooth_opening">Bluetooth is on</string>
    <string name="hint_wechat_query">Checking...</string>
    <string name="hint_save">Save</string>
    <string name="hint_stop">Stop</string>
    <string name="hint_title_alert_phone">Please keep the watch and phone connected.</string>
    <string name="hint_step_history_num">--km/--cal</string>
    <string name="hint_sync_no">Sync failed.</string>
    <string name="hint_sleep_light_avg"> Avg L-Sleep</string>
    <string name="hint_camera">Use the watch to control camera.</string>
    <string name="hint_device_connected">The watch is connected.</string>
    <string name="hint_not_save">Your settings have not been saved yet, confirm your exit?</string>
    <string name="hint_mi">Mileage</string>
    <string name="hint_steps">Step</string>
    <string name="hint_menu_light">Brightness</string>
    <string name="hint_select_alert_app">Choose the apps you want to be reminded.</string>
    <string name="hint_sleep_target">Sleep plan</string>
    <string name="hint_view_sleep">Sleep</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_firm_version">Firmware Version</string>
    <string name="hint_menu_alert_sedentary">Sedentary Reminder</string>
    <string name="hint_alert_sedentary_nap">12:00~14:00 no reminder</string>
    <string name="title_wechat">Steps for linking WeRun</string>
    <string name="hint_sleep_everyday">daily sleep</string>
    <string name="hint_menu_alert_clock">Clock Alarms</string>
    <string name="hint_view_basketball">Basketball</string>
    <string name="hint_sync_data">Syncing now...</string>
    <string name="hint_alert_sedentary_title_nap">Noon Break</string>
    <string name="hint_bluetooth_open">Enable bluetooth</string>
    <string name="hint_clock">You can set 3 alarms at most.</string>
    <string name="hint_test">Measure</string>
    <string name="hint_lost_nap_content">23:00~06:00Not remind</string>
    <string name="hint_unit_mi">km</string>
    <string name="hint_step_history_mi">Total Miles</string>
    <string name="title_app">App Reminders</string>
    <string name="hint_alert_open">Enable reminder</string>
    <string name="title_menu">Function Settings</string>
    <string name="hint_input_user_name">Please enter user name</string>
    <string name="hint_un_bind_fail">Binding failed. Please try again.</string>
    <string name="hint_sleep_start">Falling asleep</string>
    <string name="hint_app_facebook">Facebook</string>
    <string name="local">local albums</string>
    <string name="hint_alert_phone">When you receive calls, the watch will vibrate.</string>
    <string name="hint_device_finding">Searching...</string>
    <string name="hint_view_pingpong">Table Tennis</string>
    <string name="hint_menu_about">about us</string>
    <string name="hint_photo">albums</string>
    <string name="hint_device_unbind">No device bound</string>
    <string name="hint_reset">Restore factory defaults</string>
    <string name="hint_data_export_succes">Data export completed, open the file?</string>
    <string name="hint_action_connect">Connect</string>
    <string name="hint_year">year</string>
    <string name="hint_activateing">The device is being activated, please wait...</string>
    <string name="hint_join_wechat">Join WeRun, comparing your steps to those of your friends!</string>
    <string name="hint_tarin">Train</string>
    <string name="hint_height">Height</string>
    <string name="hint_device_connecting">The watch is being connected...</string>
    <string name="hint_reset_text">All data on the app and device will be deleted. This action is irreversible. Sure to restore？</string>
    <string name="hint_update_alert_content">A new firmware version found, if upgrading？ </string>
    <string name="hint_un_bind_success">Unbind successfully</string>
    <string name="hint_step_history_sum">Total Steps</string>
    <string name="hint_view_sport">Sports</string>
    <string name="hint_camera_start">Start taking photo</string>
    <string name="hint_sleep_avg">Daily Avg Sleep</string>
    <string name="hint_sleep_history_avg">Daily Avg Sleep</string>
    <string name="hint_push">push ups</string>
    <string name="hint_step_history">History</string>
    <string name="hint_lp">DBP</string>
    <string name="hint_alert_lost">When the connection breaks, the watch will vibrate.</string>
    <string name="hint_bluetooth_open_alert">Please turn on Bluetooth.</string>
    <string name="hint_view_hp">BP</string>
    <string name="hint_unit_set">Metric / Imperial Unit Setting</string>
    <string name="hint_view_hr">HR</string>
    <string name="hint_unit_sleep">h</string>
    <string name="hint_net_error">Network error， please connect to the network and retry.</string>
    <string name="hint_sleep_end">Waking up</string>
    <string name="error_end_before">End time cannot be earlier than start time.</string>
    <string name="hint_data_export">Data output</string>
    <string name="hint_hr_correct1">Note: Do not modify this data if your device is capable of measuring heart rate normally！</string>
    <string name="hint_alert_lost1">Detect the watch </string>
    <string name="hint_lost_nap">Anti-Lost-Funktion ist ausgeschaltet</string>
    <string name="title_test">In measurement, please keep the watch and phone connected.</string>
    <string name="hint_ota_success">Successfully updated</string>
    <string name="hint_time_12">12-hour</string>
    <string name="hint_time_12h">12h</string>
    <string name="hint_set">Settings</string>
    <string name="hint_contacts">Contacts</string>
    <string name="hint_ota_newest">Already the latest version</string>
    <string name="hint_find_title">If the watch is found, it will vibrate.</string>
    <string name="hint_view_mac">MAC QR Code</string>
    <string name="hint_device_unconnect">The watch is unconnected. </string>
    <string name="hint_unit_th">times</string>
    <string name="hint_restart">This operation will restore the device to its original mode and clear all data. Continue?</string>
    <string name="hint_finding_phone">A device is searching for your phone...</string>
    <string name="title_bp_history">History</string>
    <string name="hint_sleep_today"> Sleep</string>
    <string name="hint_view_clock">Clock</string>
    <string name="hint_view_download">Download</string>
    <string name="hint_action_bind">Bind</string>
    <string name="hint_device_binding">Binding...</string>
    <string name="hint_app_whatsapp">WhatsApp</string>
    <string name="hint_menu_view">Interface selection</string>
    <string name="hint_permisson_phone">To use call notifications normally, you should allow the following request.</string>
    <string name="hint_select_height">Enter height</string>
    <string name="hint_title_about">about</string>
    <string name="hint_alert_cancel">Never remind</string>
    <string name="hint_alert_sms">When you receive messages, the watch will vibrate.</string>
    <string name="hint_watch_light">Set the screen brightness of watch.</string>
    <string name="hint_view_off">Power Off</string>
    <string name="hint_device">Device</string>
    <string name="hint_select_month">Select month</string>
    <string name="hint_unopen">Disabled</string>
    <string name="hint_syncing">Syncing...</string>
    <string name="hint_menu_alert_app">App Reminders</string>
    <string name="hint_view_select">Select the interface to be displayed on the device.</string>
    <string name="hint_hr_avg">Avg </string>
    <string name="hint_switch_langue">Switching languages, please wait ...</string>
    <string name="hint_low">low</string>
    <string name="hint_title_alert_app"> App reminders</string>
    <string name="hint_ota_completed">Done</string>
    <string name="error_update_fail">Access to updating information failed. Please try again</string>
    <string name="hint_time_24">24-hour</string>
    <string name="hint_time_24h">24h</string>
    <string name="hint_bind_new_device">Bind a new device</string>
    <string name="hint_device_bind">Bind the device</string>
    <string name="hint_title_correct">Heart rate measurements strengthened</string>
    <string name="hint_permission_location">Location Info</string>
    <string name="hint_select_pic">Select Pictures</string>
    <string name="hint_check_version">Check version</string>
    <string name="hint_step_history_avg">Daily Avg Steps</string>
    <string name="hint_sync_fail">Sync failed!</string>
    <string name="hint_hr_test_timing_content">After this function is turned on, the device will measure the heart rate regularly.</string>
    <string name="hint_alert_sms_open">Message notifications</string>
    <string name="hint_view_stand">Stand-by</string>
    <string name="hint_ka">Calorie</string>
    <string name="hint_device_activate">Successfully activated</string>
    <string name="hint_click_look">Click to view</string>
    <string name="hint_menu_time">Time format</string>
    <string name="hint_menu_alert_phone">Call Notifications</string>
    <string name="hint_menu_help">help</string>
    <string name="hint_woman">Female</string>
    <string name="hint_open">Enable</string>
    <string name="hint_app_wechat">WeChat</string>
    <string name="hint_next">No upgrade now</string>
    <string name="hint_alert_bind">Please unbind the device frist</string>
    <string name="hint_alert_sedentary_time_start">Start Time</string>
    <string name="hint_view_div">Customize</string>
    <string name="hint_wechat_2">2.Record Fitness Data-Add data source-深圳曼瑞德科技</string>
    <string name="hint_wechat_3">3.If successfully adding, you can view the data on WeRun rankings. </string>
    <string name="hint_user_info">User info</string>
    <string name="hint_title_ota">Firmware Upgrade</string>
    <string name="error_not_install">Please install WeChat first</string>
    <string name="hint_centre">normal</string>
    <string name="hint_select_sex">Enter gender</string>
    <string name="hint_install_success">Successfully activated</string>
    <string name="hint_view_run">Running</string>
    <string name="hint_saveing">Save</string>
    <string name="hint_unit_height">(cm)</string>
    <string name="hint_sleep_deep">D-Sleep</string>
    <string name="hint_menu_target">Goal setting</string>
    <string name="hint_menu_alert_sms">Message Notifications</string>
    <string name="hint_unit_step">steps</string>
    <string name="hint_menu_update">Check for Updates</string>
    <string name="hint_notify_more">More applications</string>
    <string name="hint_langue">language settings</string>
    <string name="hint_menu_wechat">WeRun</string>
    <string name="hint_month_current">Current Month</string>
    <string name="hint_menu_unit">Unit setting</string>
    <string name="hint_menu_find">Find my watch</string>
    <string name="hint_data_export_help">Data storage location</string>
    <string name="title_device_connect">Device connectivity</string>
    <string name="hint_unit_ka">kcal</string>
    <string name="hint_step_history_ka">Total Calories</string>
    <string name="hint_export_excel">Mobile - File Management - iband folder - database.xls with data in excel format</string>
    <string name="hint_menu_alert_lost">Anti-Lost Alert</string>
    <string name="hint_menu_alert">Reminders</string>
    <string name="hint_menu_camera">Remote camera </string>
    <string name="hint_empty_data">No activity data</string>
    <string name="activity_feedback">Feedback</string>
</resources>