<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="72dp"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp">

    <com.manridy.iband.ui.items.DataItems
        android:id="@+id/di_data1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:data_type="left"
        app:data_hint="@string/hint_steps"
        app:data_unit="@string/hint_unit_step"
        app:data="--"/>

    <com.manridy.iband.ui.items.DataItems
        android:id="@+id/di_data2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:data_type="center"
        app:data_hint="@string/hint_mi"
        app:data_unit="@string/hint_unit_mi"
        app:data="--"/>

    <com.manridy.iband.ui.items.DataItems
        android:id="@+id/di_data3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:data_type="right"
        app:data_hint="@string/hint_ka"
        app:data_unit="@string/hint_unit_ka"
        app:data="--"/>

</LinearLayout>