<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/activity_background">
    <include layout="@layout/tab_activity"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#de000000"
        android:textSize="16sp"
        android:text="@string/hint_data_export_help"/>
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:textColor="#5a000000"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_export_excel"/>

    <Button
        android:id="@+id/bt_data"
        android:layout_width="288dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="88dp"
        android:background="@drawable/shape_button_alert"
        android:textColor="#c703a9f4"
        android:textSize="12sp"
        android:text="@string/hint_data_export"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_look"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        android:layout_marginRight="32dp"
        android:text="@string/hint_click_look"
        android:visibility="gone"/>
</LinearLayout>